@@ -15,24 +15,21 @@
  */
 package com.google.common.truth;
 
-import com.google.common.base.Function;
 import com.google.common.base.Joiner;
-import com.google.common.base.Objects;
 import com.google.common.base.Strings;
-import com.google.common.collect.ImmutableList;
-import org.checkerframework.checker.nullness.qual.Nullable;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
+import java.util.function.Function;
 
-import static com.google.common.base.Functions.identity;
-import static com.google.common.base.Preconditions.checkNotNull;
-import static com.google.common.base.Preconditions.checkState;
 import static com.google.common.truth.DoubleSubject.checkTolerance;
 import static com.google.common.truth.Fact.fact;
 import static com.google.common.truth.Fact.simpleFact;
 import static com.google.common.truth.Platform.getStackTraceAsString;
 import static java.util.Arrays.asList;
+import static java.util.Objects.requireNonNull;
 
 /**
  * Determines whether an instance of type {@code A} corresponds in some way to an instance of type
@@ -141,8 +138,8 @@ public abstract class Correspondence<A, E> {
         private final String description;
 
         private FromBinaryPredicate(BinaryPredicate<A, E> correspondencePredicate, String description) {
-            this.predicate = checkNotNull(correspondencePredicate);
-            this.description = checkNotNull(description);
+            this.predicate = requireNonNull(correspondencePredicate);
+            this.description = requireNonNull(description);
         }
 
         @Override
@@ -194,7 +191,7 @@ public abstract class Correspondence<A, E> {
      */
     public static <A, E> Correspondence<A, E> transforming(
             Function<A, ? extends E> actualTransform, String description) {
-        return new Transforming<>(actualTransform, identity(), description);
+        return new Transforming<>(actualTransform, Function.identity(), description);
     }
 
     /**
@@ -261,7 +258,7 @@ public abstract class Correspondence<A, E> {
 
         @Override
         public boolean compare(A actual, E expected) {
-            return Objects.equal(actualTransform.apply(actual), expectedTransform.apply(expected));
+            return Objects.equals(actualTransform.apply(actual), expectedTransform.apply(expected));
         }
 
         @Override
@@ -302,8 +299,8 @@ public abstract class Correspondence<A, E> {
 
         @Override
         public boolean compare(Number actual, Number expected) {
-            double actualDouble = checkNotNull(actual).doubleValue();
-            double expectedDouble = checkNotNull(expected).doubleValue();
+            double actualDouble = requireNonNull(actual).doubleValue();
+            double expectedDouble = requireNonNull(expected).doubleValue();
             return MathUtil.equalWithinTolerance(actualDouble, expectedDouble, tolerance);
         }
 
@@ -329,7 +326,7 @@ public abstract class Correspondence<A, E> {
 
         @Override
         public boolean compare(T actual, T expected) {
-            return Objects.equal(actual, expected);
+            return Objects.equals(actual, expected);
         }
 
         @Override
@@ -403,7 +400,6 @@ public abstract class Correspondence<A, E> {
          * Returns a {@link String} describing the difference between the {@code actual} and {@code
          * expected} values, if possible, or {@code null} if not.
          */
-        @Nullable
         String formatDiff(A actual, E expected);
     }
 
@@ -413,8 +409,8 @@ public abstract class Correspondence<A, E> {
         private final DiffFormatter<? super A, ? super E> formatter;
 
         FormattingDiffs(Correspondence<A, E> delegate, DiffFormatter<? super A, ? super E> formatter) {
-            this.delegate = checkNotNull(delegate);
-            this.formatter = checkNotNull(formatter);
+            this.delegate = requireNonNull(delegate);
+            this.formatter = requireNonNull(formatter);
         }
 
         @Override
@@ -530,9 +526,9 @@ public abstract class Correspondence<A, E> {
         private final List<Object> methodArguments;
 
         StoredException(Exception exception, String methodName, List<Object> methodArguments) {
-            this.exception = checkNotNull(exception);
-            this.methodName = checkNotNull(methodName);
-            this.methodArguments = checkNotNull(methodArguments);
+            this.exception = requireNonNull(exception);
+            this.methodName = requireNonNull(methodName);
+            this.methodArguments = requireNonNull(methodArguments);
         }
 
         /**
@@ -659,13 +655,13 @@ public abstract class Correspondence<A, E> {
          * was discovered by assuming a false return and continuing (see the javadoc for {@link
          * Correspondence#compare}). C.f. {@link #describeAsAdditionalInfo}.
          */
-        ImmutableList<Fact> describeAsMainCause() {
-            checkState(firstCompareException != null);
+        List<Fact> describeAsMainCause() {
+            Preconditions.checkState(firstCompareException != null);
             // We won't do pairing or diff formatting unless a more meaningful failure was found, and if a
             // more meaningful failure was found then we shouldn't be using this method:
-            checkState(firstPairingException == null);
-            checkState(firstFormatDiffException == null);
-            return ImmutableList.of(
+            Preconditions.checkState(firstPairingException == null);
+            Preconditions.checkState(firstFormatDiffException == null);
+            return List.of(
                     simpleFact("one or more exceptions were thrown while comparing " + argumentLabel),
                     fact("first exception", firstCompareException.describe()));
         }
@@ -678,8 +674,8 @@ public abstract class Correspondence<A, E> {
          * Correspondence#compare}), or when exceptions were thrown by other methods while generating
          * the failure message. C.f. {@link #describeAsMainCause}.
          */
-        ImmutableList<Fact> describeAsAdditionalInfo() {
-            ImmutableList.Builder<Fact> builder = ImmutableList.builder();
+        List<Fact> describeAsAdditionalInfo() {
+            List<Fact> builder = new ArrayList<>();
             if (firstCompareException != null) {
                 builder.add(
                         simpleFact(
@@ -700,7 +696,7 @@ public abstract class Correspondence<A, E> {
                         simpleFact("additionally, one or more exceptions were thrown while formatting diffs"));
                 builder.add(fact("first exception", firstFormatDiffException.describe()));
             }
-            return builder.build();
+            return builder;
         }
 
         private static void truncateStackTrace(Exception exception, Class<?> callingClass) {
@@ -795,12 +791,12 @@ public abstract class Correspondence<A, E> {
      * an iterable. There will be one "testing whether" fact, unless this {@link #isEquality is an
      * equality correspondence}, in which case the list will be empty.
      */
-    final ImmutableList<Fact> describeForIterable() {
+    final List<Fact> describeForIterable() {
         if (!isEquality()) {
-            return ImmutableList.of(
+            return List.of(
                     fact("testing whether", "actual element " + this + " expected element"));
         } else {
-            return ImmutableList.of();
+            return List.of();
         }
     }
 
@@ -809,11 +805,11 @@ public abstract class Correspondence<A, E> {
      * map (or multimap). There will be one "testing whether" fact, unless this {@link #isEquality is
      * an equality correspondence}, in which case the list will be empty.
      */
-    final ImmutableList<Fact> describeForMapValues() {
+    final List<Fact> describeForMapValues() {
         if (!isEquality()) {
-            return ImmutableList.of(fact("testing whether", "actual value " + this + " expected value"));
+            return List.of(fact("testing whether", "actual value " + this + " expected value"));
         } else {
-            return ImmutableList.of();
+            return List.of();
         }
     }
 
